--- a/package.json
+++ b/package.json
@@ -57,5 +57,32 @@
       "localPath": "extensions/dingtalk-channel",
       "defaultChoice": "local"
     }
+  },
+  "openclaw": {
+    "extensions": [
+      "./index.ts"
+    ],
+    "channels": [
+      "dingtalk"
+    ],
+    "installDependencies": true,
+    "channel": {
+      "id": "dingtalk",
+      "label": "DingTalk",
+      "selectionLabel": "DingTalk (钉钉)",
+      "docsPath": "/channels/dingtalk",
+      "docsLabel": "dingtalk",
+      "blurb": "钉钉企业内部机器人，使用 Stream 模式，无需公网 IP。",
+      "order": 70,
+      "aliases": [
+        "dd",
+        "ding"
+      ]
+    },
+    "install": {
+      "npmSpec": "@clawdbot/dingtalk",
+      "localPath": "extensions/dingtalk-channel",
+      "defaultChoice": "local"
+    }
   }
 }
